compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__many_preceeding_zeros_int.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0000_000_00_9_179\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0000_000_00_9_179
}


----- COMPILED JAVASCRIPT
export function main() {
  return 9_179;
}
