compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__many_preceeding_zeros_int_pattern.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main(x) {\n  let assert 0000_000_00_9_179 = x\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  let assert 0000_000_00_9_179 = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main(x) {
  if (!(x === 9179)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 20, end: 52, pattern_start: 31, pattern_end: 48 }
    )
  }
  return x;
}
