compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__modulo.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 150
expression: "\nfn go() {\n  5 % 0 // => 0\n}\n"
---
import { moduloInt } from "../gleam.mjs";

function go() {
  return moduloInt(5, 0);
}

