compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__operator_precedence.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn go() {\n  2.4 *. { 3.5 +. 6.0 }\n}\n"
---
----- SOURCE CODE

pub fn go() {
  2.4 *. { 3.5 +. 6.0 }
}


----- COMPILED JAVASCRIPT
export function go() {
  return 2.4 * (3.5 + 6.0);
}
