compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__preceeding_zeros_float.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 222
expression: "\nfn main() {\n  09_179.1\n}\n"
---
function main() {
  return 9_179.1;
}

