compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__preceeding_zeros_float_const.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub const x = 09_179.1\n"
---
----- SOURCE CODE

pub const x = 09_179.1


----- COMPILED JAVASCRIPT
export const x = 9_179.1;
