compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__remainder_by_non_zero_int.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "pub fn main() {\n  1 % 2\n}"
---
----- SOURCE CODE
pub fn main() {
  1 % 2
}

----- COMPILED JAVASCRIPT
export function main() {
  return 1 % 2;
}
